kubernetes/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: my-cicd-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: my-ui-image:latest # 빌드된 Docker 이미지
        ports:
        - containerPort: 80
